--- a/styles/BlogCard.module.css
+++ b/styles/BlogCard.module.css
@@ -52,10 +52,6 @@
     margin: 1em auto;
   }
 
-  .article {
-    height: 108px;
-  }
-
   .article p {
     font-size: 1rem;
   }
