--- a/styles/ContactForm.module.css
+++ b/styles/ContactForm.module.css
@@ -1,65 +1,3 @@
-.wrapper {
-  width: 100%;
-  transform: scaleY(0);
-  opacity: 0;
-}
-
-.banner {
-  width: 100%;
-  height: 70vh;
-  background-color: #001a4a;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.banner h1 {
-  font-size: 3em;
-  color: white;
-}
-
-.banner p {
-  font-size: 1em;
-  color: white;
-  width: 80%;
-  margin: 1em 0;
-  letter-spacing: 1px;
-}
-
-.send__message__ctn {
-  display: flex;
-  align-items: center;
-  width: 90%;
-  height: 70vh;
-  margin: 3em auto;
-  gap: 3em;
-}
-
-.lhs {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-}
-
-.lhs .info {
-  display: flex;
-  align-items: center;
-  gap: 2em;
-}
-
-.info .icon {
-  font-size: 2rem;
-  color: #666;
-}
-
-.info span {
-  font-size: 1.2rem;
-  color: #666;
-}
-
 .form {
   width: 50%;
   display: flex;
@@ -128,6 +66,9 @@
   cursor: pointer;
   padding: 0 1em;
   margin: 1em 0;
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
 }
 
 .inactive {
